--- a/docs/getit.css
+++ b/docs/getit.css
@@ -78,3 +78,24 @@ body {
 
   transition: width 0.2s ease-out, padding-top 0.2s ease-out;
 } */
+
+.logo {
+  width: 5%;
+  height: 5%;
+  margin-top: 0.65rem;
+  margin-bottom: 0.65rem;
+  margin-left: 0.5rem;
+}
+
+.subtitle {
+  display: block;
+  padding-top: 2rem;
+  margin-left: 1rem;
+}
+
+.appbar {
+  display: flex;
+  flex-direction: row;
+  background-color: #f7d736;
+  box-shadow: 0px 0px 15px 0px #2c2c2c;
+}
