--- a/docs/getit.css
+++ b/docs/getit.css
@@ -89,8 +89,8 @@ body {
 
 .subtitle {
   display: block;
-  padding-top: 2rem;
-  margin-left: 1rem;
+  padding-top: 30px;
+  margin-left: 0.75%;
 }
 
 .appbar {
