--- a/docs/getit.css
+++ b/docs/getit.css
@@ -20,185 +20,212 @@ Algumas informações úteis e dicas:
       #fae890
       #abe9c1
   - Sombra: https://codepen.io/sdthornton/pen/wBZdXq
- */
-
- html,
- body {
-   font-family: "Roboto", sans-serif;
- }
+*/
  
- .container{
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   width: 100%;
-   height: 100%;
-   background-color: #ffffff;
- }
- 
- .form-card{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   padding: 2%;
-   width: 40%;
-   height: 100%;
-   background-color: #ffffff;
-   box-shadow: 0px 6px 20px 0px #2c2c2c;
-   margin-bottom: 3%;
- }
- 
- input{
-    width: 100%;
-    height: 2rem;
-    margin: 0px 1% 10px 1%;
-    background-color: #ffffff;
-    border: none;
-    text-align: start;
-    text-size-adjust: 100%;
- }
- .form-card-title{
-  font-size: 2rem;
+html, body {
+font-family: "Roboto", sans-serif;
 }
- textarea{
-    width: 100%;
-    height: 2rem;
-    margin: 1px 1.1% 10px 1%;
-    border: none;
-    border-radius: 5px;
-    background-color: #ffffff;
-    text-align: start;
-    text-size-adjust: 140%;
-  }
 
-  button{
-    width: 100%;
-    height: 3rem;
-    
-    border: none;
-    border-radius: 5px;
-    background-color: #ffffff;
-    font-size: 20px;
-    text-align: center;
-    justify-content: center;
-    padding-bottom: 2rem;
-  }
- /* Você pode usar o CSS comentado abaixo, se ajudar */
- /* Fonte: https://codepen.io/CrisWoler/pen/ogXBLj */
-  .btn {
-   position: relative;
-   display: block;
-   padding: 10px 15px;
- 
-   overflow: hidden;
-   
-   border-width: 0;
-   outline: none;
-   border-radius: 2px;
-   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
- 
-   background-color: #f7d736;
- 
-   transition: background-color 0.3s;
- }
- 
- .btn > * {
-   position: relative;
- }
- 
- .btn:before {
-   content: "";
- 
-   position: absolute;
-   top: 0%;
-   left: 50%;
- 
-   display: block;
-   width: 0;
-   padding-top: 0;
- 
-   border-radius: 100%;
- 
-   background-color: rgba(236, 240, 241, 0.3);
- 
-   -webkit-transform: translate(-50%, -50%);
-   -moz-transform: translate(-50%, -50%);
-   -ms-transform: translate(-50%, -50%);
-   -o-transform: translate(-50%, -50%);
-   transform: translate(-50%, -50%);
- }
- 
- .btn:active:before {
-   width: 120%;
-   padding-top: 120%;
- 
-   transition: width 0.2s ease-out, padding-top 0.2s ease-out;
- }
- 
- .logo {
-   width: 5%;
-   height: 5%;
-   margin: 1% 1% 1% 1%;
- }
- 
- .subtitle {
-   display: inline-flex;
-   align-items: center;
- }
- 
- .appbar {
-   display: flex;
-   flex-direction: row;
-   background-color: #f7d736;
-   box-shadow: 0px 0px 15px 0px #2c2c2c;
-   margin-bottom: 2%;
- }
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+}
 
- .card-container{
-    font-family:'Permanent Marker', cursive;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    align-content: space-around;
-    justify-content: space-around;
-    width: 100%;
-    height: 100%;
-    background-color: #ffffff;
- }
+.form-card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1%;
+  width: 40%;
+  height: 100%;
+  background-color: #ffffff;
+  box-shadow: 0px 6px 20px 0px #2c2c2c;
+  margin-bottom: 3%;
+  border-radius: 10px;
+}
 
- .card{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 1%;
-    justify-content: space-around;
-    width: 15%;
-    height: 7rem;
-    padding: 5px;
-    border-radius: 5px;
-    rotate: 3deg;
-    background-color: #e0d426;
-    box-shadow: 0px 0px 15px -2px #2c2c2c;
- }
+input{
+  width: 100%;
+  height: 2rem;
+  margin: 0px 1% 10px 1%;
+  background-color: #ffffff;
+  border: none;
+  text-align: start;
+  text-size-adjust: 100%;
+}
+.form-card-title{
+  font-size: 2rem;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 3%;
+  font-weight: bold;
+}
+
+.autoresize{
+  font-family: 'Roboto', sans-serif;
+}
+
+textarea{
+  width: 100%;
+  height: 2rem;
+  margin: 1px 1.1% 10px 1%;
+  border: none;
+  border-radius: 5px;
+  background-color: #ffffff;
+  text-align: start;
+  text-size-adjust: 140%;
+}
+
+button{
+  width: 100%;
+  height: 3rem;
+
+  border: none;
+  border-radius: 5px;
+  background-color: #ffffff;
+  font-size: 20px;
+  text-align: center;
+  justify-content: center;
+  padding-bottom: 2rem;
+}
+/* Você pode usar o CSS comentado abaixo, se ajudar */
+/* Fonte: https://codepen.io/CrisWoler/pen/ogXBLj */
+.btn {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+
+  overflow: hidden;
+
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
+
+  background-color: #f7d736;
+
+  transition: background-color 0.3s;
+}
+
+.btn > * {
+  position: relative;
+}
+
+.btn:before {
+  content: "";
+
+  position: absolute;
+  top: 0%;
+  left: 50%;
+
+  display: block;
+  width: 0;
+  padding-top: 0;
+
+  border-radius: 100%;
+
+  background-color: rgba(236, 240, 241, 0.3);
+
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.btn:active:before {
+  width: 120%;
+  padding-top: 120%;
+
+  transition: width 0.2s ease-out, padding-top 0.2s ease-out;
+}
+
+.logo {
+  width: 5%;
+  height: 5%;
+  margin: 1% 1% 1% 1%;
+}
+
+.subtitle {
+display: inline-flex;
+align-items: center;
+}
+
+.appbar {
+  display: flex;
+  flex-direction: row;
+  background-color: #f7d736;
+  box-shadow: 0px 0px 15px 0px #2c2c2c;
+  margin-bottom: 2%;
+}
+
+.card-container{
+  font-family:'Permanent Marker', cursive;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  align-content: space-around;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+}
+
+.card{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 1%;
+  justify-content: space-around;
+  width: 15%;
+  height: 7rem;
+  padding: 5px;
+  border-radius: 5px;
+  rotate: 3deg;
+  background-color: #e0d426;
+  box-shadow: 0px 0px 15px -2px #2c2c2c;
+}
 
 .card-title{
-    display: inline-flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    border-radius: 5px 5px 0px 0px;
+  display: inline-flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px 5px 0px 0px;
 }
 .card-content{
-    display: flex;
-    flex-direction: row;
-    color: #4c4c4c;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    height: 100%;
-    background-color: #e0d426;
-    border-radius: 0px 0px 5px 5px;
+  display: flex;
+  flex-direction: row;
+  color: #4c4c4c;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  border-radius: 0px 0px 5px 5px;
+}
+
+.card-color-1 {
+  background-color: #FAE890;
+}
+
+.card-color-2 {
+  background-color: #EF89BA;
+}
+
+.card-color-3 {
+  background-color: #9DE0F5;
+}
+
+.card-color-4 {
+  background-color: #ABE9C1;
+}
+
+.card-color-5 {
+  background-color: #EAD3A7;
 }
