--- a/docs/getit.css
+++ b/docs/getit.css
@@ -31,7 +31,6 @@ html, body {
 .container{
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
@@ -171,10 +170,7 @@ align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
-  align-content: space-around;
   justify-content: space-around;
-  width: 100%;
-  height: 100%;
   background-color: #ffffff;
 }
 
@@ -187,6 +183,7 @@ align-items: center;
   width: 15%;
   height: 7rem;
   padding: 5px;
+  margin-top: 1rem;
   border-radius: 5px;
   rotate: 3deg;
   background-color: #e0d426;
@@ -195,16 +192,17 @@ align-items: center;
 
 .card-title{
   display: inline-flex;
-  align-items: center;
   width: 100%;
-  height: 100%;
+  height: max-content;
   border-radius: 5px 5px 0px 0px;
+  margin: 0.2rem;
 }
 .card-content{
   display: flex;
   flex-direction: row;
   color: #4c4c4c;
   align-items: center;
+  margin: 5px;
   justify-content: space-around;
   width: 100%;
   height: 100%;
