--- a/docs/getit.css
+++ b/docs/getit.css
@@ -52,7 +52,7 @@ html, body {
 
 input{
   width: 100%;
-  height: 2rem;
+  height: 1rem;
   margin: 0px 1% 10px 1%;
   background-color: #ffffff;
   border: none;
@@ -60,7 +60,7 @@ input{
   text-size-adjust: 100%;
 }
 .form-card-title{
-  font-size: 2rem;
+  font-size: 1rem;
   font-family: 'Roboto', sans-serif;
   margin-bottom: 3%;
   font-weight: bold;
@@ -72,7 +72,7 @@ input{
 
 textarea{
   width: 100%;
-  height: 2rem;
+  height: 1rem;
   margin: 1px 1.1% 10px 1%;
   border: none;
   border-radius: 5px;
@@ -193,6 +193,7 @@ align-items: center;
 
 .card-title{
   display: inline-flex;
+  font-weight: bolder;
   width: 100%;
   height: max-content;
   border-radius: 5px 5px 0px 0px;
